Update run.sh script
 - build project, if not done yet
 - update jvm args